--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
     "express-rate-limit": "^6.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "nodemailer": "^6.9.7",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
