--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "helmet": "^7.0.0",
     "express-rate-limit": "^6.10.0",
     "path": "^0.12.7",
-    "nodemailer": "^6.9.7",
-    "twilio": "^4.19.0"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
